--- a/views/estate_property_tag_views.xml
+++ b/views/estate_property_tag_views.xml
@@ -5,8 +5,9 @@
         <field name="name">estate.property.tag.tree</field>
         <field name="model">estate.property.tag</field>
         <field name="arch" type="xml">
-            <tree string="Tags" default_order="name asc">
+            <tree string="Tags" default_order="name asc" create="1" delete="1" edit="1" editable="top">
                 <field name="name" />
+                <field name="color" widget="color_picker"/>
             </tree>
         </field>
     </record>
