--- a/views/estate_property_type_views.xml
+++ b/views/estate_property_type_views.xml
@@ -18,6 +18,11 @@
         <field name="arch" type="xml">
             <form string="Property Type" duplicate="False">
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button class="oe_stat_button" name="%(realestate_module.estate_property_offer_action)d" type="action" icon="fa-money">
+                            <field name="offer_count" string="" widget="statinfo" />
+                        </button>
+                    </div>
                     <div class='oe_title'>
                         <h1>
                             <field name="name" placeholder="Property type"/>
