--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -5,14 +5,15 @@
         <field name="name">estate.property.view.tree</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
-            <tree string="Estates properties">
+            <tree string="Estates properties" decoration-muted="state == 'sold'" decoration-success="state in ('offer received','offer accepted')" decoration-bf="state == 'offer accepted'">
                 <field name="name" />
                 <field name="postcode" />
                 <field name="bedrooms" />
                 <field name="living_area" />
                 <field name="expected_price" />
                 <field name="selling_price" />
-                <field name="date_availability" />
+                <field name="date_availability" optional="hide" />
+                <field name="state" invisible="1" />
             </tree>
         </field>
     </record>
@@ -23,26 +24,20 @@
         <field name="arch" type="xml">
             <form string="Estate property">
                 <header>
-                    <button string="Sold" name="action_property_sold" type="object"
-                        class="oe_highlight" states="new,offer accepted,offer received" />
-                    <button string="Cancel" name="action_property_cancel" type="object"
-                        class="oe_highlight" attrs="{'invisible': [('state','=','sold')]}" />
-                    <field name="state" widget="statusbar"
-                        statusbar_visible="new,offer received,offer accepted,sold" />
+                    <button string="Sold" name="action_property_sold" type="object" class="oe_highlight" states="new,offer accepted,offer received" />
+                    <button string="Cancel" name="action_property_cancel" type="object" class="oe_highlight" attrs="{'invisible': [('state','=','sold')]}" />
+                    <field name="state" widget="statusbar" statusbar_visible="new,offer received,offer accepted,sold" />
                 </header>
                 <sheet>
                     <div class="oe_title">
                         <h1>
                             <field name="name" placeholder="New Estate" />
                         </h1>
-                        <field name="tags_ids" widget="many2many_tags"
-                            options="{'color_field': 'color','no_edit_color':True}"
-                            placeholder="Tags" />
+                        <field name="tags_ids" widget="many2many_tags" options="{'color_field': 'color','no_edit_color':True}" placeholder="Tags" />
                     </div>
                     <group>
                         <group>
-                            <field name="property_type_id" widget="many2one"
-                                options="{'no_create': True}" />
+                            <field name="property_type_id" widget="many2one" options="{'no_create': True}" />
                             <field name="postcode" />
                             <field name="date_availability" />
                         </group>
@@ -61,12 +56,9 @@
                                 <field name="facades" />
                                 <field name="garage" />
                                 <field name="garden" />
-                                <field name="garden_area"
-                                    attrs="{'invisible':[('garden','=',False)]}" />
-                                <field name="garden_orientation" widget="selection"
-                                    attrs="{'invisible':[('garden','=',False)]}" />
+                                <field name="garden_area" attrs="{'invisible':[('garden','=',False)]}" />
+                                <field name="garden_orientation" widget="selection" attrs="{'invisible':[('garden','=',False)]}" />
                                 <field name="total_area" />
-
                             </group>
                         </page>
                         <page name="other_info" string="Other Info">
@@ -76,24 +68,18 @@
                             </group>
                         </page>
                         <page name="offers" string="Offers">
-                            <field name="offer_ids"
-                                attrs="{'readonly':[('state','in',('sold','canceled','offer accepted'))]}">
-                                <tree string="Caption" delete="true" edit="true"
-                                    decoration-danger="status == 'refused'"
-                                    decoration-success="status == 'accepted'">
+                            <field name="offer_ids" attrs="{'readonly':[('state','in',('sold','canceled','offer accepted'))]}">
+                                <tree string="Caption" delete="true" edit="true" editable="top" decoration-danger="status == 'refused'" decoration-success="status == 'accepted'">
                                     <field name="property_id" invisible="1" />
+                                    <field name="status" invisible="1" />
                                     <field name="price" />
                                     <field name="partner_id" widget="many2one_avatar" />
                                     <field name="validity" />
                                     <field name="date_deadline" />
-                                    <button string="" name="action_accept_offer" type="object"
-                                        icon="fa-check"
-                                        attrs="{'invisible':[('status','',('sold','offer accepted'))]}" />
-                                    <button string="" name="action_refuse_offer" type="object"
-                                        icon="fa-times"
-                                        attrs="{'invisible':[('status','in',('sold','offer accepted'))]}" />
-                                    <field name="status" widget="selection" />
+                                    <button string=" " name="action_accept_offer" type="object" icon="fa-check" attrs="{'invisible':[('status','in', ('accepted','refused'))]}" />
+                                    <button string=" " name="action_refuse_offer" type="object" icon="fa-times" attrs="{'invisible':[('status','in', ('accepted','refused'))]}" />
                                 </tree>
+
                                 <form string="Caption" create="true" delete="true" edit="true">
                                     <sheet>
                                         <group>
@@ -130,15 +116,13 @@
                 <field name="postcode" />
                 <field name="expected_price" />
                 <field name="bedrooms" />
-                <field name="living_area" />
+                <field name="living_area" filter_domain="[('living_area', '&gt;=', self)]"/>
                 <field name="facades" />
                 <separator />
-                <filter name="available" string="Available"
-                    domain="[('state', 'in', ('new','offer','received'))]" />
+                <filter name="living_area" string="Living Area"  />
+                <filter name="available" string="Available" domain="[('state', 'in', ('new','offer','received'))]" />
                 <group expand="0" string="Group By">
-                    <filter name="group_by_postcode" string="Postcode"
-                        context="{'group_by':'postcode'}" help="" />
-
+                    <filter name="group_by_postcode" string="Postcode" context="{'group_by':'postcode'}" help="" />
                 </group>
 
 
@@ -151,7 +135,7 @@
         <field name="res_model">estate.property</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
-        <field name="context">{}</field>
+        <field name="context">{'search_default_available':True}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Enter your first estate!
